test/fail_compilation/imports/test314c.d
private import std.stdio : writefln;
